--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,7 @@
 @import url(../blocks/root/root.css);
 @import url(../blocks/page/page.css);
 
+@import url(../blocks/page/__header/page__header.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__nav/header__nav.css);
 @import url(../blocks/header/__list/header__list.css);
