--- a/pages/index.css
+++ b/pages/index.css
@@ -10,3 +10,11 @@
 @import url(../blocks/header/__list/header__list.css);
 @import url(../blocks/header/__links/header__links.css);
 @import url(../blocks/header/__link/header__link.css);
+
+@import url(../blocks/page/__content/page__content.css);
+
+@import url(../blocks/content/__lead/content__lead.css);
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__caption/lead__caption.css);
+@import url(../blocks/lead/__image/lead__image.css);
