--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,10 +1,16 @@
 .header__link {
   color: #000;
   text-decoration: none;
-  font-family: 'Asimov Pro', Arial, sans-serif;
-  font-weight: 700;
+  font-family: 'Manrope', Arial, sans-serif;
+  font-weight: 800;
   font-size: 13px;
-  line-height: 15px;
+  line-height: 18px;
+}
+
+@media screen and (max-width: 896px) {
+  .header__link {
+    font-size: 12px;
+  }
 }
 
 
