--- a/blocks/header/__list/header__list.css
+++ b/blocks/header/__list/header__list.css
@@ -1,3 +1,9 @@
 .header__list:last-child {
   margin-left: auto;
 }
+
+@media screen and (max-width: 450px) {
+  .header__list:not(:last-child) {
+    display: none;
+  }
+}
