--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,9 +1,9 @@
 .lead__caption {
   margin: 0;
   color: #fed0ab;
-  font-family: 'Asimov Pro', Arial, sans-serif;
-  font-weight: 700;
+  font-family: 'Manrope', Arial, sans-serif;
+  font-weight: 800;
   font-size: 13px;
-  line-height: 15px;
+  line-height: 18px;
   text-transform: uppercase;
 }
