--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,13 @@
 .lead {
-  max-width: 1100px;
+  max-width: 1051px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+@media screen and (max-width: 584px) {
+  .lead {
+    flex-direction: column;
+    gap: 25px;
+  }
 }
