--- a/pages/index.css
+++ b/pages/index.css
@@ -18,3 +18,12 @@
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
 @import url(../blocks/lead/__image/lead__image.css);
+
+@import url(../blocks/content/__places/content__places.css);
+@import url(../blocks/places/places.css);
+@import url(../blocks/places/__item/places__item.css);
+@import url(../blocks/places/__image/places__image.css);
+@import url(../blocks/places/__description/places__description.css);
+@import url(../blocks/places/__title/places__title.css);
+@import url(../blocks/places/__paragraphs/places__paragraphs.css);
+@import url(../blocks/places/__paragraph/places__paragraph.css);
