--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,7 +1,7 @@
 .footer__copyright {
-  font-family: "Asimov Pro", sans-serif;
+  font-family: 'Manrope', Arial, sans-serif;
+  font-weight: 800;
   font-size: 32px;
-  font-weight: 700;
   line-height: 48px;
   text-align: center;
   margin: 0;
