--- a/pages/index.css
+++ b/pages/index.css
@@ -8,24 +8,21 @@
 @import url(../blocks/page/__content/page__content.css);
 @import url(../blocks/page/__footer/page__footer.css);
 
-
-/*Block content*/
-@import url(../blocks/content/__lead/content__lead.css);
-
-
+/*Block header*/
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__nav/header__nav.css);
 @import url(../blocks/header/__list/header__list.css);
 @import url(../blocks/header/__links/header__links.css);
 @import url(../blocks/header/__link/header__link.css);
 
-
-
+/*Block lead*/
+@import url(../blocks/content/__lead/content__lead.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
 @import url(../blocks/lead/__image/lead__image.css);
 
+/*Block places*/
 @import url(../blocks/content/__places/content__places.css);
 @import url(../blocks/places/places.css);
 @import url(../blocks/places/__item/places__item.css);
