--- a/pages/index.css
+++ b/pages/index.css
@@ -10,10 +10,14 @@
 
 /*Block header*/
 @import url(../blocks/header/header.css);
+@import url(../blocks/hamb/hamb.css);
+@import url(../blocks/hamb/__field/hamb__field.css);
+@import url(../blocks/hamb/__bar/hamb__bar.css);
 @import url(../blocks/header/__nav/header__nav.css);
 @import url(../blocks/header/__list/header__list.css);
 @import url(../blocks/header/__links/header__links.css);
 @import url(../blocks/header/__link/header__link.css);
+@import url(../blocks/popup/popup.css);
 
 /*Block lead*/
 @import url(../blocks/content/__lead/content__lead.css);
